--- a/DigitRecognitionWeb/DigitRecognitionWeb.csproj
+++ b/DigitRecognitionWeb/DigitRecognitionWeb.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DigitRecognitionService\DigitRecognitionService.csproj" />
+  </ItemGroup>  
 </Project>
