--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}\\bin\\Debug\\netcoreapp1.1\\DigitRecognition.dll",
+            "program": "${workspaceRoot}\\DigitRecognitionWeb\\bin\\Debug\\netcoreapp1.1\\DigitRecognitionWeb.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
